--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
       for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
       mixpanel.init("7491f0cbde3cb9598d8dc137df339243");
     </script>
-    <title>Dan Stepanov</title>
+    <title>Nina Stepanov</title>
     <link href="/css/main.css" rel="stylesheet">
     <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png">
   </head>
@@ -56,39 +56,35 @@
     		<h2>About Me</h2>
 
   		  <p>
-          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">Swift and React-Native developer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
+          I am a Bostonian living in NYC, currently an Associate at <a href="https://www.techstars.com/programs/iot-program/" target="_blank">Techstars IoT</a>. I’m a generalist with a background in marketing, growth, process optimization, and partnership development. I love black tea and lifting heavy things. I’m deeply passionate about connecting people and growing startups.
         </p>
 
         <p>
-          I graduated with a degree in Chemical Engineering from Penn State in May of 2015. While in college, I ran my own company and headed the <a href="http://www.innoblue.org/" target="_blank">Innoblue</a> Venture Accelerator where I helped five student teams transform their ideas into effective businesses.
+          I graduated with a degree in Entrepreneurship and Marketing from Northeastern University in December of 2015. While in college, I participated in the co-op program by working 3, full-time 6-month internships at <a href="http://embed.ly/" target="_blank">Embedly</a> (YC, acq by Medium), <a href="http://www.quickbase.com/" target="_blank">Intuit Quickbase</a>, and <a href="http://www.hubspot.com/" target="_blank">HubSpot</a>, all before graduating. I was on the board of the <a href="http://northeastern.edu/entrepreneurs/" target="_blank">Entrepreneurs Club</a> and <a href="https://www.northeastern.edu/idea/" target="_blank">IDEA: Northeastern University’s Venture Accelerator.</a> I started my own company selling single-package protein and supplements and advised countless student startups, some of which I still work closely with today.
         </p>
 
         <p>
-          I've spent a lot of time, outside of college, studying and exploring various technologies inlcuding human-computer interface, artificial intelligence, machine learning, cross-platform mobile design, and augmented reality via 3D mobile scanning.
+          Since graduating, I’ve helped build <a href="https://inbound.org/" target="_blank">Inbound.org</a> (as part of HubSpot Labs), marketed local government software as Director of Marketing for <a href="http://viewpointcloud.com/" target="_blank">ViewPoint Cloud</a>, and co-founded a community for students interested in health and fitness called <a href="http://fituniversity.co/" target="_blank">Fit University</a>. In my free time, I satisfy my interest in venture capital as a contributor on the topic for <a href="https://venturefizz.com/investor-profiles?field_blog_categories_tid=75" target="_blank">VentureFizz</a>.
         </p>
 
-        <p>
-          Outside of technology, I've been reading a lot about the Chinese style of Buddhism known as Zen. One particular concept that really stands out to me is Shoshin, or "Beginner's Mind." Beginners learn the most effectively as their minds are, inherently, ready to learn. By suppressing arrogance/pride and approaching each learning opportunity with the mentality of a beginner, I can ensure that I absorb the maximum amount of information available. I highly recommend the book <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=zen+mind+beginner%27s+mind+book" target="_blank">Zen Mind, Beginner's Mind</a> by Shunryū Suzuki. I also enjoy hiking, biking, and almost anything involving water.
-        </p>
-
-  		  <p>Ask me things on Twitter if you're curious.</p>
+  		  <p><a href="https://twitter.com/ninarstepanov" target="_blank">Hang out with me on Twitter.</a></p>
 
   		  <h2>Interests</h2>
 
         <p>
-          I love collaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
+          My personal and professional lives are made up of the same people, interests, and past times and I like it that way. When I’m not technically working, you’ll likely find me at the nearest CrossFit box, making friends and lifting heavy objects.
         </p>
 
         <p>
-          Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes. Every day, I'm learning how to better build elegant, scalable and technologically-focused solutions.
+          At the moment, I'm particularly interested in joining a NYC-based, seed stage startup to work directly with the founders in a multi-faceted role (read: doing all the things that make the business grow).
         </p>
 
-  		  <p>Feel free to <a href="mailto:dan@slice.capital">send me an email</a>.</p>
+  		  <p>Reach out and <a href="mailto:ninastepanov@gmail.com">tell me what you're working on</a>.</p>
 
         <div class="footer">
-          <a class="email" href="mailto:dan@slice.capital?subject=%5BWEB%5D%20Contact"></a>
-          <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
-          <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
+          <a class="email" href="mailto:ninastepanov@gmail.com?subject=%5BWEB%5D%20Contact"></a>
+          <a class="twitter" href="http://twitter.com/ninarstepanov" target="_blank"></a>
+          <a class="twitter" href="http://linkedin.com/in/ninarstepanov" target="_blank"></a>
         </div>
       </div>
 	  </div>
