Replace Dan with Nina

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </script>
       <div "home">
 
-        <h1>Dan Stepanov</h1>
+        <h1>Nina Stepanov</h1>
 
         <h2>I'm a Mobile Developer</h2>
 
