--- a/index.html
+++ b/index.html
@@ -10,30 +10,6 @@
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
   </head>
   <body>
-    <!-- Start of Async Drift Code -->
-    <script>
-    !function() {
-      var t;
-      if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0,
-      t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-      t.factory = function(e) {
-        return function() {
-          var n;
-          return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
-        };
-      }, t.methods.forEach(function(e) {
-        t[e] = t.factory(e);
-      }), t.load = function(t) {
-        var e, n, o, i;
-        e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"),
-        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js",
-        n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
-      });
-    }();
-    drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('39u97m8786gs');
-    </script>
-    <!-- End of Async Drift Code -->
     <script type="text/javascript">
       mixpanel.track(
         "Open Page",
@@ -56,29 +32,35 @@
 
         <h1>Nina Stepanov</h1>
 
-        <h2>I'm a Mobile Developer</h2>
+        <h2>I'm a Problem Solver</h2>
 
           <p>
-            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a>.
+            Hey there! I'm a startup afficionado and Boston native living in NYC.
           </p>
 
         <h2>Work</h2>
 
           <p>
-            I work at <a href="https://slice.capital" target="_blank">Slice Capital</a> as the Dark Lord of the Sith. Additionally, I'm a mentor at <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help high school students learn to code. You can check out more details on my <a href="/work">Work</a> page.
+            I'm currently an Associate for <a href="https://www.techstars.com/programs/iot-program/" target="_blank">Techstars IoT</a> (ending on October 12th), Co-founder of <a href="http://fituniversity.co/" target="_blank">Fit University</a>, and VC Contributor for <a href="https://venturefizz.com/investor-profiles?field_blog_categories_tid=75" target="_blank">VentureFizz</a>. You can check out more details on my <a href="/work">Work</a> page.
           </p>
 
           <p>
-            I'm currently in the Bay Area while working on developing <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'm looking forward to traveling a bit more over the next year with trips to South America and Australia.
+            I'm currently in NYC while finishing up my 3-month Associate program at Techstars IoT. I'm on the lookout for my next adventure with a NYC, seed stage startup working directly with the founders as a wearer of many hats.
           </p>
 
-          <h3>Latest Apps</h3>
+          <h3>Side Hustles</h3>
 
           <ul class="apps">
             <li>
-              <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
-                <img src="./img/app/slice.png" alt="Slice Capital">
-                <span>Slice Capital</span>
+              <a href="http://fituniversity.co/" rel="external nofollow" title="Fit University" target="_blank">
+                <img src="./img/app/slice.png" alt="Fit University">
+                <span>Fit University</span>
+              </a>
+            </li>
+            <li>
+              <a href="http://fituniversity.co/" rel="external nofollow" title="Galavanters" target="_blank">
+                <img src="./img/app/slice.png" alt="Galavanters">
+                <span>Galavanters</span>
               </a>
             </li>
             <li>
