--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <h1>Nina Stepanov</h1>
 
-        <h2>I'm a Problem Solver</h2>
+        <h2>I'm a Problem Solver, World Traveler, and Workaholic.</h2>
 
           <p>
             Hey there! I'm a startup afficionado and Boston native living in NYC.
@@ -45,7 +45,7 @@
           </p>
 
           <p>
-            I'm currently in NYC while finishing up my 3-month Associate program at Techstars IoT. I'm on the lookout for my next adventure with a NYC, seed stage startup working directly with the founders as a wearer of many hats.
+            At the moment, I'm finishing up my 3-month Associate program at Techstars IoT in NYC and I'm on the lookout for my next adventure with a NYC-based, seed stage startup working directly with the founders as a wearer of many hats.
           </p>
 
           <h3>Side Hustles</h3>
