--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         </div>
 
         <div class="footer">
-          <a class="email" href="mailto:me@danstepanov.com?subject=%5BWEB%5D%20Contact"></a>
-          <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
-          <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
+          <a class="email" href="mailto:ninastepanov@gmail.com?subject=%5BWEB%5D%20Contact"></a>
+          <a class="linkedin" href="http://linkedin.com/in/ninarstepanov" target="_blank"></a>
+          <a class="twitter" href="http://twitter.com/ninarstepanov" target="_blank"></a>
         </div>
       </div>
   </body>
