--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <p style="padding-top:15px;padding-left:15px;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">I say things on <a href="https://twitter.com/ninarstepanov/">Twitter</a>,
     <br>
     <br>
-    and <a href="https://www.linkedin.com/in/ninastepanov/">Linkedin</a> says things about me.
+    and <a href="https://www.linkedin.com/in/ninastepanov/">LinkedIn</a> says things about me.
   </p>
 	</body>	
 </html>
